--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "cheerio": "^1.0.0-rc.2",
     "grunt": "^1.0.3",
+    "mock-express-request": "^0.2.2",
+    "mock-express-response": "^0.2.2",
     "sails": "^1.1.0",
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
@@ -23,7 +26,7 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "_mocha ./test/lifecycle.test.js ./test"
+    "mocha": "_mocha ./furl/furlsails/test/lifecycle.js ./furl/test"
   },
   "main": "app.js",
   "repository": {
