npm install changes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "ajv": "^6.7.0",
     "cheerio": "^1.0.0-rc.2",
     "grunt": "^1.0.3",
     "mock-express-request": "^0.2.2",
