--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "cheerio": "^1.0.0-rc.2",
+    "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "mock-express-request": "^0.2.2",
     "mock-express-response": "^0.2.2",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
-    "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
+    "lint": "./node_modules/.bin/eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "mocha": "_mocha ./furl/furlsails/test/lifecycle.js ./furl/test"
   },
   "main": "app.js",
