--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
     "lint": "./node_modules/.bin/eslint ./api --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "_mocha ./furl/furlsails/test/lifecycle.js ./furl/test"
+    "mocha": "_mocha test/lifecycle.js test/**/*.js" 
   },
   "main": "app.js",
   "repository": {
