--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "ajv": "^6.8.1",
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "mock-express-request": "^0.2.2",
     "mock-express-response": "^0.2.2",
+    "mysql": "^2.16.0",
     "sails": "^1.1.0",
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
@@ -27,7 +29,7 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
     "lint": "./node_modules/.bin/eslint ./api --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "_mocha ./test/lifecycle.js ./test/**/*.js" 
+    "mocha": "_mocha ./test/lifecycle.js ./test/**/*.js"
   },
   "main": "app.js",
   "repository": {
