--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mock-express-request": "^0.2.2",
     "mock-express-response": "^0.2.2",
     "mysql": "^2.16.0",
+    "node": "^11.9.0",
     "sails": "^1.1.0",
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
@@ -27,7 +28,6 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "preinstall": "test \"$NODE_ENV\" != production && ~/.nvm/nvm.sh install 11 && ~/.nvm/nvm.sh use 11 && ~/.nvm/nvm.sh alias default 11",
     "postinstall": "test \"$NODE_ENV\" != production && (test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) && mysql-ctl start && mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
     "sails": "test \"$NODE_ENV\" != production && mysql-ctl start && sails lift",
     "start": "NODE_ENV=production node app.js",
