started implimenting testing and reformated the model

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "FallSport": true,
     "SpringSport": true,
     "Major": true,
-    "Student": true
+    "Student": true,
+    "Visit": true
     // …and any others (e.g. `"Organization": true`)
     // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   },
