--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "ajv": "^6.8.1",
     "cheerio": "^1.0.0-rc.2",
+    "coveralls": "^3.0.2",
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mock-express-request": "^0.2.2",
     "mock-express-response": "^0.2.2",
     "mysql": "^2.16.0",
+    "nyc": "^13.3.0",
     "sails": "^1.1.0",
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
@@ -32,7 +35,8 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
     "lint": "./node_modules/.bin/eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "(test \"$NODE_ENV\" = production || mysql-ctl start) && _mocha --recursive ./test/lifecycle.js ./test || exit 0;",
+    "mocha": "(test \"$NODE_ENV\" = production || mysql-ctl start) && nyc --reporter=lcov ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "docs": "rm -r docs 2> /dev/null && jsdoc -d docs api/**/*.js"
   },
   "main": "app.js",
