--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "postinstall": "test \"$NODE_ENV\" != production && (test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) && mysql-ctl start && mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
+    "postinstall": "(test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) ; mysql-ctl start ; mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
     "sails": "test \"$NODE_ENV\" != production && mysql-ctl start && sails lift",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && echo 'Done.'",
     "lint": "./node_modules/.bin/eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "(test \"$NODE_ENV\" = production || mysql-ctl start) && nyc --reporter=lcov ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+    "mocha": "mysql-ctl start; nyc --reporter=lcov ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "docs": "rm -r docs 2> /dev/null && jsdoc -d docs api/**/*.js"
   },
