--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "ajv": "^6.8.1",
     "cheerio": "^1.0.0-rc.2",
-    "coveralls": "^3.0.2",
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "mocha": "^5.2.0",
@@ -29,13 +28,14 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "postinstall": "(test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) ; mysql-ctl start ; mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
-    "sails": "test \"$NODE_ENV\" != production && mysql-ctl start && sails lift",
+    "postinstall": "(test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) ; mysql-ctl start 2> /dev/null; mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
+    "sails": "test \"$NODE_ENV\" != production && mysql-ctl start 2> /dev/null && sails lift",
     "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run mocha && echo 'Done.'",
-    "lint": "./node_modules/.bin/eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "mocha": "mysql-ctl start; nyc --reporter=lcov ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
-    "coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js", 
+    "test": "npm run lint && npm run mocha && npm run coverage",
+    "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./api/*.js meets .eslintrc standards'",
+    "xtest": "./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+    "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+    "coverage": "nyc report",
     "docs": "rm -r docs 2> /dev/null && jsdoc -d docs api/**/*.js"
   },
   "main": "app.js",
