--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run mocha && npm run coverage",
     "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./api/*.js meets .eslintrc standards'",
-    "xtest": "./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "coverage": "nyc report",
-    "docs": "rm -r docs 2> /dev/null && jsdoc -c ./jsdoc.conf -d docs api/**/*.js"
+    "docs": "rm -r docs 2> /dev/null && jsdoc --recurse -c ./jsdoc.conf -d docs api"
   },
   "main": "app.js",
   "repository": {
