--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
+    "htmlhint": "^0.10.1",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "mock-express-request": "^0.2.2",
@@ -31,10 +32,11 @@
     "postinstall": "(test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) ; mysql-ctl start 2> /dev/null; mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
     "sails": "test \"$NODE_ENV\" != production && mysql-ctl start 2> /dev/null && sails lift",
     "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run mocha && npm run coverage",
+    "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
     "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./api/*.js meets .eslintrc standards'",
     "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "coverage": "nyc report",
+    "htmlhint": "htmlhint views",
     "docs": "rm -r docs 2> /dev/null && jsdoc --recurse -c ./jsdoc.conf -d docs api"
   },
   "main": "app.js",
