--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "htmlhint": "^0.10.1",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "mock-express-request": "^0.2.2",
@@ -37,7 +38,7 @@
     "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "coverage": "nyc report",
     "htmlhint": "htmlhint views",
-    "docs": "rm -r docs 2> /dev/null && jsdoc --recurse -c ./jsdoc.conf -d docs api"
+    "docs": "rm -r docs 2> /dev/null; jsdoc --recurse -c ./jsdoc.conf -d docs api"
   },
   "main": "app.js",
   "repository": {
