--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^5.13.0",
     "grunt": "^1.0.3",
     "htmlhint": "^0.10.1",
+    "http-status": "^1.3.1",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
