--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "postinstall": "(test -L ../.eslintrc || ln -s `pwd`/.eslintrc ../.eslintrc) ; mysql-ctl start 2> /dev/null; mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
-    "sails": "test \"$NODE_ENV\" != production && mysql-ctl start 2> /dev/null && sails lift",
+    "postinstall": "sudo mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
+    "sails": "test \"$NODE_ENV\" != production && sails lift",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
     "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./api/*.js meets .eslintrc standards'",
-    "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+    "mocha": "nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "coverage": "nyc report",
     "htmlhint": "htmlhint views",
     "docs": "rm -r docs 2> /dev/null; jsdoc --recurse -c ./jsdoc.conf -d docs api"
