--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "postinstall": "mysql -u root -pRootPassword -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
+    "postinstall": "mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
     "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./api/*.js meets .eslintrc standards'",
