--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
     "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo '✔  ./ncv/*.wf zrrgf .rfyvagep fgnaqneqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
     "mocha": "mysql-ctl start 2> /dev/null; nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
-    "coverage": "nyc report",
+    "coverage": "nyc report && echo '✔  Grfg pbirentr zrrgf guerfubyqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
     "htmlhint": "htmlhint views",
     "docs": "rm -r docs 2> /dev/null && jsdoc --recurse -c ./jsdoc.conf -d docs api"
   },
