--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nlcAttendance",
+  "name": "nlc-attendance",
   "version": "0.0.0",
   "description": "Attendance tracking for the Naylor Learning Center",
   "keywords": [],
@@ -33,7 +33,7 @@
     "postinstall": "mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
     "start": "NODE_ENV=production node app.js",
     "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
-    "lint": "eslint ./api --fix --max-warnings=0 --report-unused-disable-directives && echo './ncv/*.wf zrrgf .rfyvagep fgnaqneqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
+    "lint": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
     "coverage": "nyc report && echo 'Grfg pbirentr zrrgf guerfubyqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
     "mocha": "nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
     "htmlhint": "htmlhint views",
