--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "htmlhint": "^0.11.0",
     "http-status": "^1.4.0",
     "jsdoc": "^3.6.3",
+    "ldapjs": "^1.0.2",
     "mocha": "^6.2.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mock-express-request": "^0.2.2",
