--- a/.nycrc.json
+++ b/.nycrc.json
@@ -6,8 +6,7 @@
     "functions": 95,
     "branches": 95,
     "exclude": [
-        "test/**/*.js",
-        "api/controllers/*.js"
+        "test/**/*.js"
     ],
     "reporter": [
         "lcov"
