--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@sailshq/eslint": "^4.19.3"
     },
     "scripts": {
-        "postinstall": "mysql -u root -e 'CREATE DATABASE IF NOT EXISTS nlcAttendance;'",
+        "postinstall": "./dbsetup.sh",
         "start": "NODE_ENV=production node app.js",
         "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
         "lint": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
