--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nlc-attendance",
-    "version": "0.0.0",
+    "version": "2.0.0-rc1",
     "description": "Attendance tracking for the Naylor Learning Center",
     "keywords": [],
     "dependencies": {
