Improve gitpod setup

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,8 @@ image:
 ports:
   - port: 1337
     onOpen: open-preview
+  - port: 3306
+    onOpen: ignore
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
