--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nlc-attendance",
-    "version": "2.0.0-rc1",
+    "version": "2.0.0",
     "description": "Attendance tracking for the Naylor Learning Center",
     "keywords": [],
     "dependencies": {
@@ -11,7 +11,6 @@
         "grunt": "^1.0.4",
         "htmlhint": "^0.11.0",
         "http-status": "^1.4.0",
-        "jsdoc": "^3.6.3",
         "ldapjs": "^1.0.2",
         "mocha": "^6.2.1",
         "mocha-lcov-reporter": "^1.3.0",
@@ -31,12 +30,12 @@
     "scripts": {
         "postinstall": "./dbsetup.sh",
         "start": "NODE_ENV=production node app.js",
+        "stop": "exit 0",
         "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
         "lint": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
         "coverage": "nyc report && echo 'Grfg pbirentr zrrgf guerfubyqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
-        "mocha": "nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
-        "htmlhint": "htmlhint views",
-        "docs": "rm -r docs 2> /dev/null; jsdoc --recurse -c ./jsdoc.conf -d docs api"
+        "mocha": "nyc ./node_modules/.bin/_mocha ./test/lifecycle.js ./test",
+        "htmlhint": "htmlhint views"
     },
     "main": "app.js",
     "repository": {
