--- a/package.json
+++ b/package.json
@@ -6,29 +6,29 @@
     "dependencies": {
         "@sailshq/connect-redis": "^3.2.1",
         "@sailshq/lodash": "^3.10.4",
-        "cheerio": "^1.0.0-rc.3",
-        "eslint": "^6.8.0",
         "grunt": "^1.3.0",
-        "htmlhint": "^0.11.0",
         "http-status": "^1.4.2",
         "ldapjs": "^1.0.2",
         "lodash": "^4.17.20",
-        "mocha": "^7.2.0",
-        "mocha-lcov-reporter": "^1.3.0",
         "mysql": "^2.18.1",
-        "nyc": "^15.1.0",
-        "request-promise": "^4.2.6",
         "sails": "^1.3.1",
         "sails-hook-grunt": "^4.0.1",
         "sails-hook-orm": "^2.1.1",
-        "sails-mysql": "^1.0.1",
+        "sails-mysql": "^1.0.1"
+    },
+    "devDependencies": {
+        "@sailshq/eslint": "^4.19.3",
+        "cheerio": "^1.0.0-rc.3",
+        "eslint": "^6.8.0",
+        "htmlhint": "^0.11.0",
+        "mocha": "^7.2.0",
+        "mocha-lcov-reporter": "^1.3.0",
+        "nyc": "^15.1.0",
         "should": "^13.2.3",
         "supertest-session": "^4.1.0"
     },
-    "devDependencies": {
-        "@sailshq/eslint": "^4.19.3"
-    },
     "scripts": {
+        "lift": "./node_modules/sails/bin/sails.js lift",
         "start": "NODE_ENV=production node app.js",
         "stop": "exit 0",
         "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
