--- a/package.json
+++ b/package.json
@@ -28,10 +28,9 @@
         "supertest-session": "^4.1.0"
     },
     "scripts": {
-        "lift": "./node_modules/sails/bin/sails.js lift",
         "start": "NODE_ENV=production node app.js",
         "stop": "exit 0",
-        "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
+        "test": "npm run lint && npm run htmlhint && npm run mocha",
         "lint": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
         "coverage": "nyc report",
         "mocha": "nyc ./node_modules/.bin/_mocha ./test/lifecycle.js ./test",
