--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@sailshq/eslint": "^4.19.3",
         "cheerio": "^1.0.0-rc.3",
+        "cypress": "^5.2.0",
         "eslint": "^6.8.0",
         "htmlhint": "^0.11.0",
         "mocha": "^7.2.0",
