--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,3 +4,7 @@ image:
 tasks:
   - init: npm install
     command: sails lift
+
+vscode:
+  extensions:
+    - esbenp.prettier-vscode@5.7.1:GDba64T6G+TUi1qmc6BE3A==
