--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,14 +1,9 @@
 {
-    "check-coverage": true,
     "skip-full": true,
-    "lines": 95,
-    "statements": 95,
-    "functions": 95,
-    "branches": 95,
     "exclude": [
         "test/**/*.js"
     ],
     "reporter": [
-        "lcov"
+        "text-summary"
     ]
 }
