--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "scripts": {
         "start": "NODE_ENV=production node app.js",
         "stop": "exit 0",
-        "test": "npm run lint && npm run htmlhint && npm run mocha && npm run coverage",
+        "test": "npm run lint && npm run htmlhint && npm run mocha",
         "lint": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
-        "coverage": "nyc report && echo 'Grfg pbirentr zrrgf guerfubyqf' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
-        "mocha": "nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test",
+        "mocha": "rm ./.tmp/localDiskDb/*.db && nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test/models ./test/policies",
         "htmlhint": "htmlhint views"
     },
     "main": "app.js",
