Automatically open gitpod browser

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,10 @@ tasks:
   - init: npm install
     command: sails lift
 
+ports:
+  - port: 1337
+    onOpen: open-browser
+    
 vscode:
   extensions:
     - esbenp.prettier-vscode@5.7.1:GDba64T6G+TUi1qmc6BE3A==
