--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,13 +2,13 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: npm install
+  - init: CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npm install
     command: sails lift
 
 ports:
   - port: 1337
     onOpen: open-browser
-    
+
 vscode:
   extensions:
     - esbenp.prettier-vscode@5.7.1:GDba64T6G+TUi1qmc6BE3A==
