Fix cypress cache?

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npm install
+  - init: export CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress && npm install
     command: export CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress && sails lift
 
 ports:
