--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,8 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: export CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress && npm install
-    command: export CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress && sails lift
+  - init: CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npm install
+    command: sails lift
 
 ports:
   - port: 1337
