--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,10 +1,9 @@
 {
     "skip-full": true,
-    "exclude": [
-        "test/**/*.js"
+    "include": [
+        "api/**/*.js"
     ],
     "reporter": [
-        "text-summary",
         "lcov"
     ]
 }
