--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
         "mocha": "rm -f ./.tmp/localDiskDb/*.db && nyc ./node_modules/.bin/_mocha --recursive ./test/lifecycle.js ./test/models ./test/policies",
         "qa:html": "htmlhint views",
         "qa:js": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
-        "qa:tests": "PORT=1338 nyc sails lift & CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npx cypress run -q && nyc report --reporter=text-summary && pkill -f nyc",
-        "qa:all": "npm run qa:html && npm run qa:js && npm run qa:tests"
+        "qa:tests": "PORT=1338 npx nyc sails lift & CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npx cypress run -q ; echo A total of $? test\\(s\\) failed. && pkill -f nyc"
     },
     "main": "app.js",
     "repository": {
