--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
               uses: cypress-io/github-action@v1
               with:
                   #   build: npm run build
-                  start: npm run qa:tests
+                  start: npm run ci
               #   start: npm start
               #   wait-on: http://localhost:3030
