--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "qa:html": "htmlhint views",
         "qa:js": "eslint . --fix --max-warnings=0 && echo 'rfyvag ehyrf fngvfsvrq' | tr 'A-Za-z' 'N-ZA-Mn-za-m'",
         "qa:tests": "PORT=1338 npx nyc sails lift & CYPRESS_CACHE_FOLDER=$GITPOD_REPO_ROOT/.tmp/cypress npx cypress run -q ; echo A total of $? test\\(s\\) failed. && pkill -f nyc",
-        "ci": "PORT=1338 npx nyc sails lift & npx cypress run -q ; echo A total of $? test\\(s\\) failed."
+        "ci": "PORT=1338 npx nyc sails lift & npx cypress run -q ; pkill -f nyc"
     },
     "main": "app.js",
     "repository": {
