--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: End-to-end tests
+name: Cypress tests
 on: [push]
 jobs:
     cypress-run:
@@ -12,4 +12,3 @@ jobs:
               with:
                   record: false
                   quiet: true
-                  start: npm run ci
