--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,4 @@ jobs:
                   record: false
                   quiet: true
                   start: PORT=1338 sails lift
+                  wait-on: "http://localhost:1338"
