--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,9 @@
         "node": true,
         "mocha": true
     },
-
     "parserOptions": {
         "ecmaVersion": 8
     },
-
     "globals": {
         // If "no-undef" is enabled below, be sure to list all global variables that
         // are used in this app's backend code (including the globalIds of models):
@@ -19,75 +17,156 @@
         "Major": true,
         "Student": true,
         "Staff": true,
-        "Visit": true
+        "Visit": true,
+        "cy": true,
+        "Cypress": true,
         // …and any others (e.g. `"Organization": true`)
         // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     },
-
     "rules": {
-        "block-scoped-var": ["error"],
-        "callback-return": ["error", ["done", "proceed", "next", "onwards", "callback", "cb"]],
-        "camelcase": ["warn", {
-            "properties": "always"
-        }],
-        "comma-style": ["warn", "last"],
-        "curly": ["warn", "multi-line"],
-        "eqeqeq": ["error", "always"],
-        "eol-last": ["warn"],
-        "handle-callback-err": ["error"],
-        "indent": ["warn", 4, {
-            "SwitchCase": 1,
-            "MemberExpression": "off",
-            "FunctionDeclaration": {
-                "body": 1,
-                "parameters": "off"
-            },
-            "FunctionExpression": {
-                "body": 1,
-                "parameters": "off"
-            },
-            "CallExpression": {
-                "arguments": "off"
-            },
-            "ArrayExpression": 1,
-            "ObjectExpression": 1,
-            "ignoredNodes": ["ConditionalExpression"]
-        }],
-        "no-dupe-keys": ["error"],
-        "no-duplicate-case": ["error"],
-        "no-extra-semi": ["warn"],
-        "no-labels": ["error"],
-        "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
-        "no-redeclare": ["warn"],
-        "no-return-assign": ["error", "always"],
-        "no-sequences": ["error"],
-        "no-undef": ["error"],
+        "block-scoped-var": [
+            "error"
+        ],
+        "callback-return": [
+            "error",
+            [
+                "done",
+                "proceed",
+                "next",
+                "onwards",
+                "callback",
+                "cb"
+            ]
+        ],
+        "camelcase": [
+            "warn",
+            {
+                "properties": "always"
+            }
+        ],
+        "comma-style": [
+            "warn",
+            "last"
+        ],
+        "curly": [
+            "warn",
+            "multi-line"
+        ],
+        "eqeqeq": [
+            "error",
+            "always"
+        ],
+        "eol-last": [
+            "warn"
+        ],
+        "handle-callback-err": [
+            "error"
+        ],
+        "indent": [
+            "warn",
+            4,
+            {
+                "SwitchCase": 1,
+                "MemberExpression": "off",
+                "FunctionDeclaration": {
+                    "body": 1,
+                    "parameters": "off"
+                },
+                "FunctionExpression": {
+                    "body": 1,
+                    "parameters": "off"
+                },
+                "CallExpression": {
+                    "arguments": "off"
+                },
+                "ArrayExpression": 1,
+                "ObjectExpression": 1,
+                "ignoredNodes": [
+                    "ConditionalExpression"
+                ]
+            }
+        ],
+        "no-dupe-keys": [
+            "error"
+        ],
+        "no-duplicate-case": [
+            "error"
+        ],
+        "no-extra-semi": [
+            "warn"
+        ],
+        "no-labels": [
+            "error"
+        ],
+        "no-mixed-spaces-and-tabs": [
+            2,
+            "smart-tabs"
+        ],
+        "no-redeclare": [
+            "warn"
+        ],
+        "no-return-assign": [
+            "error",
+            "always"
+        ],
+        "no-sequences": [
+            "error"
+        ],
+        "no-undef": [
+            "error"
+        ],
         // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
         // ^^Note: If this "no-undef" rule is enabled (set to `["error"]`), then all model globals
         // (e.g. `"Organization": true`) should be included above under "globals".
         // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-        "no-unexpected-multiline": ["warn"],
-        "no-unreachable": ["warn"],
-        "no-unused-vars": ["warn", {
-            "caughtErrors": "all",
-            "caughtErrorsIgnorePattern": "^unused($|[A-Z].*$)",
-            "argsIgnorePattern": "^unused($|[A-Z].*$)",
-            "varsIgnorePattern": "^unused($|[A-Z].*$)"
-        }],
-        "no-use-before-define": ["error", {
-            "functions": false
-        }],
-        "one-var": ["warn", "never"],
-        "quotes": ["warn", "double", {
-            "avoidEscape": false,
-            "allowTemplateLiterals": true
-        }],
-        "semi": ["warn", "always"],
-        "semi-spacing": ["warn", {
-            "before": false,
-            "after": true
-        }],
-        "semi-style": ["warn", "last"],
+        "no-unexpected-multiline": [
+            "warn"
+        ],
+        "no-unreachable": [
+            "warn"
+        ],
+        "no-unused-vars": [
+            "warn",
+            {
+                "caughtErrors": "all",
+                "caughtErrorsIgnorePattern": "^unused($|[A-Z].*$)",
+                "argsIgnorePattern": "^unused($|[A-Z].*$)",
+                "varsIgnorePattern": "^unused($|[A-Z].*$)"
+            }
+        ],
+        "no-use-before-define": [
+            "error",
+            {
+                "functions": false
+            }
+        ],
+        "one-var": [
+            "warn",
+            "never"
+        ],
+        "quotes": [
+            "warn",
+            "double",
+            {
+                "avoidEscape": false,
+                "allowTemplateLiterals": true
+            }
+        ],
+        "semi": [
+            "warn",
+            "always"
+        ],
+        "semi-spacing": [
+            "warn",
+            {
+                "before": false,
+                "after": true
+            }
+        ],
+        "semi-style": [
+            "warn",
+            "last"
+        ],
         "space-infix-ops": "warn"
     },
     "reportUnusedDisableDirectives": true
