--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,6 +1,7 @@
 name: dev
-on: [push]
-  branches: [dev]
+on:
+    push:
+        branches: [dev]
 jobs:
     cypress-run:
         runs-on: ubuntu-latest
