--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "sails": "^1.3.1",
         "sails-hook-grunt": "^4.0.1",
         "sails-hook-orm": "^2.1.1",
+        "sails-mongo": "^1.2.0",
         "sails-mysql": "^1.0.1"
     },
     "devDependencies": {
