--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,8 @@ jobs:
               uses: cypress-io/github-action@v2
               env:
                   NODE_ENV: staging
+                  sails_datastores__default__adapter: "sails-mongo"
+                  sails_datastores__default__url: "mongodb://atlas:atlas@cluster0-shard-00-00.dso9n.mongodb.net:27017,cluster0-shard-00-01.dso9n.mongodb.net:27017,cluster0-shard-00-02.dso9n.mongodb.net:27017/nlcAttendance?ssl=true&replicaSet=atlas-87jum1-shard-0&authSource=admin&retryWrites=true&w=majority"
               with:
                   record: false
                   quiet: true
