Use secret for db url

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -7,6 +7,7 @@ on:
 jobs:
     cypress:
         runs-on: ubuntu-latest
+        environment: staging
         steps:
             - name: Checkout code
               uses: actions/checkout@v1
@@ -16,7 +17,7 @@ jobs:
               env:
                   NODE_ENV: staging
                   sails_datastores__default__adapter: "sails-mongo"
-                  sails_datastores__default__url: "mongodb://atlas:atlas@cluster0-shard-00-00.dso9n.mongodb.net:27017,cluster0-shard-00-01.dso9n.mongodb.net:27017,cluster0-shard-00-02.dso9n.mongodb.net:27017/nlcAttendance?ssl=true&replicaSet=atlas-87jum1-shard-0&authSource=admin&retryWrites=true&w=majority"
+                  sails_datastores__default__url: ${{ secrets.MONGO_URL }}
               with:
                   record: false
                   quiet: true
