--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -4,6 +4,8 @@ on:
         branches: [staging, prod]
     pull_request:
         branches: [staging, prod]
+    workflow_dispatch:
+    
 jobs:
     qa:
         runs-on: ubuntu-latest
